# urska_agent

./: .gitignore  Cargo.toml  Procfile  README.md  build_fe.sh  kill.sh  qdrant.sh  run.sh  run_all.sh  systemd.service  update_reagent.sh  wait-port.sh
backend/: .env.sample  Cargo.toml  up_2491f354-b60c-40d8-ad08-46d8d30b27b9.json  up_2dccfa8b-ccbb-4b22-bfa9-685a0f87cc01.json  up_56093d10-56db-4c3d-8c08-c5a640ae6dd9.json  up_e048a90d-dacc-4047-ab26-f9f749517b60.json
backend/src/: ldap.rs  main.rs  messages.rs  profile.rs  queue.rs  session.rs
core/: .env.sample  Cargo.toml  executor_run_0.json  executor_run_1.json  executor_run_2.json  executor_run_3.json  last_plan.json
core/src/: blueprint.rs  executor.rs  function_filter.rs  main.rs  peers.rs  planner.rs  prompt_reconstuct.rs  quick_responder.rs  replanner.rs  urska_v2.rs  usrka.rs
core/src/agents/: blueprint.rs  executor.rs  function_filter.rs  mod.rs  planner.rs  prompt_reconstuct.rs  quick_responder.rs  replanner.rs  urska_v2.rs  urska_v3.rs  usrka.rs
frontend/: angular.json  package-lock.json  package.json  proxy.conf.json
frontend/src/: index.html  main.ts  styles.css
frontend/src/app/: app.config.ts  app.css
frontend/src/app/components/chat/: chat.component.css  chat.component.html  chat.component.ts
frontend/src/app/components/chat-input/: chat-input.component.css  chat-input.component.html  chat-input.component.ts
frontend/src/app/components/login/: login.component.css  login.component.html  login.component.ts
frontend/src/app/components/message-list/: message-list.component.css  message-list.component.html  message-list.component.ts
frontend/src/app/components/navbar/: navbar.component.css  navbar.component.html  navbar.component.ts
frontend/src/app/components/side-panel/: side-panel.component.css  side-panel.component.html  side-panel.component.ts
frontend/src/app/models/: message.model.ts  notification.model.ts  profile.model.ts
frontend/src/app/state/: state.service.ts
hype_embedder/: .env.sample  .gitignore  Cargo.toml  bla.json  chack_progress.py  chunk.py  chunks_old.jsonl  chunks_rules.jsonl  correct_progress.py  dedup_chunks.py  hype_ingest.py  ingest_chunks_hype.py  pdf2md.py  processed_old.json  progress.json  progress_pre.json  progress_todo.json  questions_review.jsonl  requirements.txt
hype_embedder/src/: chunk.rs  file.rs  main.rs  qdrant.rs
hype_embedder/src/rag/: mod.rs
hype_embedder/src/rag/comm/: mod.rs  qdrant.rs  question.rs
hype_embedder/src/rag/loading/: loaded_data.rs  markdown.rs  mod.rs  pdf.rs
hype_embedder/src/rag/models/chunks/: result_chunk.rs
hype_embedder/src/rag/models/files/: mod.rs
hype_embedder/src/rag/processing/: dedup_embeddings.rs  hype.rs
mcp-memory/: .env.sample  .gitignore  Cargo.toml  README.md  qdrant.sh
mcp-memory/src/: config.rs  main.rs  mcp_service.rs  memory_service.rs  models.rs  ollama_service.rs  qdrant_service.rs
mcp-programme/: Cargo.toml
mcp-programme-agent/: Cargo.toml
mcp-programme-agent/src/: main.rs  memory_store_agent.rs  programme.rs  programme_agent.rs  util.rs
mcp-programme/src/: main.rs  util.rs
mcp-rag/: Cargo.toml  LICENSE
mcp-rag-faq/: Cargo.toml  README.md
mcp-rag-faq/src/: main.rs
mcp-rag-faq/src/rag/: mod.rs
mcp-rag-faq/src/rag/comm/: question.rs
mcp-rag-faq/src/rag/models/chunks/: hype_chunk.rs  result_chunk.rs
mcp-rag-faq/src/rag/processing/: dedup_embeddings.rs  embedd_file.rs  prepare.rs  prompt.rs
mcp-rag-page/: Cargo.toml
mcp-rag-page/src/: main.rs
mcp-rag-page/src/rag/comm/: mod.rs
mcp-rag-page/src/rag/models/: mod.rs  output.rs
mcp-rag-page/src/rag/models/chunks/: chunk.rs  mod.rs  result_chunk.rs
mcp-rag-page/src/rag/processing/: dedup_embeddings.rs  mod.rs
mcp-rag-rules/src/: main.rs
mcp-rag-rules/src/rag/comm/: embedding.rs
mcp-rag-rules/src/rag/loading/: text.rs
mcp-rag-rules/src/rag/processing/: summarize.rs
mcp-rag/src/: main.rs
mcp-rag/src/rag/: mod.rs
mcp-rag/src/rag/comm/: qdrant.rs
mcp-rag/src/rag/models/: input.rs
mcp-rag/src/rag/processing/: hype.rs  simple.rs
mcp-scraper/: Cargo.toml
mcp-scraper/src/: main.rs
mcp-server-page-guide/: Cargo.toml
mcp-server-scraper/: Cargo.toml
mcp-staff/: Cargo.toml
mcp-staff-agent/: Cargo.toml
mcp-staff-agent/src/: main.rs  memory_store_agent.rs  profile.rs  programme.rs  staff_agent.rs  util.rs
mcp-staff/src/: main.rs  profile.rs
src/: main.rs
testing/: agent.py  bench.py
(+2 files in other folders)
