[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web        = "4"
actix-web-actors = "4"
tokio            = { version = "1", features = ["macros","rt-multi-thread"] }
reqwest          = { version = "0.11", features = ["stream"] }
eventsource-client = "0.3"      # for parsing SSE from MCP
serde            = { version = "1.0", features = ["derive"] }
serde_json       = "1.0"
rmcp = {version = "0.2.1", features = ["client", "transport-sse-client", "reqwest"]}
actix = "0.13.5"
futures = "0.3.31"
