[package]
name = "hype_embedder"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
once_cell = "1.21.3"
pdf-extract = "0.9.0"
qdrant-client = "1.15.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.46.1", features = ["full"] }
