[package]
name = "rust_memory_mcp"
version = "0.1.0"
edition = "2024"

[dependencies]
rmcp = { version = "0.2", features = [
    "transport-streamable-http-server",
    "transport-worker"
]}
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
qdrant-client = "1.7" # Or latest
dotenv = "0.15"
uuid = { version = "1.4", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0" # For easy error handling in main and setup
schemars = "0.8" # For JsonSchema derive, used by rmcp tools
env_logger = "0.10" # Or your preferred logger
ollama-rs = "0.1" # 
tokio-util = "0.7.15"
axum = "0.8.4"
