[package]
name = "mcp-rag-urska"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = {version = "1.0.98" }
reqwest = { version = "0.12.15", features = ["blocking"] }
rmcp = { version = "0.2", features = [
    "server", 
    "transport-streamable-http-server",
    "client", 
    "transport-sse-client", 
    "reqwest",
    "tower",
]}
serde_json = "1.0.140"
tokio = { version = "1.45.0", features = ["full"] }
schemars = { version = "0.8", optional = true }
serde = { version = "1.0.219", features = ["derive"] }
reagent ={ git = "https://github.com/VakeDomen/Reagent.git", branch = "main" }
html-escape = "0.2.13"
async-trait = "0.1.88"
dotenv = "0.15.0"
futures = "0.3.31"
ollama-rs = { version = "0.3.2", features = ["stream"] }
once_cell = "1.21.3"
pdf-extract = "0.9.0"
qdrant-client = "1.15.0"
regex = "1.11.1"
uuid = { version = "1.17.0", features = ["v4"] }
axum = "0.8.4"
