[package]
name = "mcp-scraper"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
reqwest = { version = "0.12.15", features = ["blocking"] }
rmcp = { git = "https://github.com/modelcontextprotocol/rust-sdk", branch = "main", features = ["server", "transport-streamable-http-server", "transport-sse-server", "transport-io"] }
scraper = "0.23.1"
serde_json = "1.0.140"
tokio = { version = "1.45.0", features = ["full"] }
schemars = { version = "0.8", optional = true }
serde = { version = "1.0.219", features = ["derive"] }
fast_html2md = "0.0.48"
